# Srt_time_editor

./: CMakeLists.txt  IO_funcs.c  README.md  error_funcs.c  macros_and_funcs.h  main.c  srt_time_editor  srt_time_editor.c
src/: main.c
src/libs/: macros_and_funcs.h  time_funcs.c
